# adv_mla_asgn3

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
app/: streamlit.py
app/src/: functions.py
docs/: Makefile  conf.py  index.rst  make.bat
models/: airline_gb_pipe.joblib  airline_lin_pipe.joblib  airline_rf_pipe.joblib  rfr_pipeline_model3.joblib
notebooks/: Group_10-Britto_Rohan-24610990-linear_regression.ipynb  Group_10-Britto_Rohan-24610990-multiple_algorithms.ipynb  Group_10-Khatri_Smit-24610990-decision_tree.ipynb  Group_10-Mohiuddin_Mahjabeen_24610507_AdaBoostRegressor_Pipeline_Model.ipynb  Group_10-data_merging_cleaning.ipynb  Group_10_Mohiuddin_Mahjabeen_StId_24610507_rbr_Pipeline_Model.ipynb  Group_10_Murgudkar_Archit_14190286_xgb.ipynb
reports/: Group_10-Britto_Rohan-24610990-multiple_algorithms.docx
src/: airline_preproc_pipe.joblib
