[tool.poetry]
name = "adv-mla-asgn3"
version = "1.0"
description = "Data Product with Machine Learning"
authors = ["rohanbrit <rohanbrit@gmail.com>"]
readme = "README.md"
packages = [{include = "adv_mla_asgn3"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "2.0.1"
pathlib = "^1.0.1"
jupyterlab = "3.6.3"
scikit-learn = "1.3.1"
matplotlib = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
